--- a/lab5/frontend/src/components/Header/Header.css
+++ b/lab5/frontend/src/components/Header/Header.css
@@ -1,21 +1,49 @@
-body {
-    background-color: #11181C;
-    color: #FFFFFF;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-.header-logo {
-    height: 64px;
-    width: 64px;
-}
-
 header {
     background-color: #222222;
-    padding: 20px;
+    padding: 16px 32px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    border: 1px solid #FFFFFF;
+    border-bottom: 1px solid #FFFFFF;
+}
+
+.navbar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.nav-left {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.nav-logo img,
+.header-logo {
+    height: 48px;
+    width: 48px;
+}
+
+.nav-title {
+    color: #148761;
+    font-size: 28px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.nav-title:hover {
+    color: #1fc287; /* немного светлее для hover */
+}
+
+.nav-link {
+    color: #148761;
+    font-size: 20px;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.nav-link:hover {
+    color: #1fc287; /* эффект подсветки при наведении */
 }
