--- a/lab7/frontend/src/pages/BigORequest/BigORequestPage.css
+++ b/lab7/frontend/src/pages/BigORequest/BigORequestPage.css
@@ -146,3 +146,24 @@
         width: 90%;
     }
 }
+.array-size-control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    width: 100%;
+    padding: 0 20px;
+}
+
+.array-size-buttons {
+    display: flex;
+    flex-direction: column;     /* Кнопки одна под другой */
+    gap: 10px;
+    width: 100%;
+    max-width: 300px;
+}
+
+
+.algorithm-config{
+    margin: 25px;
+}
